--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Explore Yasno API"
 readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
+    "httpx>=0.28.1",
+    "more-itertools>=10.5.0",
     "pydantic>=2.10.4",
     "pytest>=8.3.4",
     "ruff>=0.8.4",
