--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Explore Yasno API"
 readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
+    "hishel>=0.1.1",
     "httpx>=0.28.1",
     "more-itertools>=10.5.0",
     "pydantic>=2.10.4",
