Replace example JSON with test and vcr-recording

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx>=0.28.1",
     "more-itertools>=10.5.0",
     "pydantic>=2.10.4",
+    "pytest-recording>=0.13.2",
     "pytest>=8.3.4",
     "ruff>=0.8.4",
 ]
