--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "temno"
 version = "0.1.0"
-description = "Explore Yasno API"
+description = "Exploring the Yasno API for lights out"
 readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
