--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13.1"
 dependencies = [
     "hishel>=0.1.1",
     "httpx>=0.28.1",
+    "icalendar>=6.1.0",
     "more-itertools>=10.5.0",
     "pydantic>=2.10.4",
     "rich>=13.9.4",
