--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dev = [
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
     "ruff>=0.8.4",
+    "pytest-clarity>=1.0.1",
 ]
 
 # https://docs.astral.sh/uv/concepts/projects/config/#project-packaging
