--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic>=2.10.4",
     "rich>=13.9.4",
     "typer>=0.15.1",
+    "wireup>=0.15.0",
 ]
 
 [dependency-groups]
