--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
-    "python.testing.pytestArgs": [
-        "-vv", "--color=yes"
-    ],
-    "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.envFile": "${workspaceFolder}/.env",
-    "jupyter.notebookFileRoot": "${workspaceFolder}/src",
+    "python.testing.pytestArgs": [
+        "-vv",
+        "-s", 
+        "--color=yes",
+    ],
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/src",
+    ],
+    "python.analysis.autoImportCompletions": true,
 }
