--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,16 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/temno", "src/yasno_api"]
+
+[project.optional-dependencies]
+temno = [ "yasno_api" ]
+
+[project.urls]
+"Source" = "https://github.com/alk3mist/temno"
+"Tracker" = "https://github.com/alk3mist/temno"
+
 [project.scripts]
 temno = "temno.cli:app"
 
